# Rust-and-Yew

./: Cargo.toml  Trunk.toml  index.html  tailwind.config.js  tailwind_service.sh
src/: main.rs
src/services/: event_bus.rs  mod.rs  producers.rs  subscriber.rs
src/views/: dashboard.rs
tailwind/: package-lock.json  package.json  tailwind.config.js
