[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19" 
yew-router = "0.16"
yew-agent = "0.1.0"
serde = { version = "1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]